--- a/UTM.Gamepad.Domain/UTM.Gamepad.Domain.csproj
+++ b/UTM.Gamepad.Domain/UTM.Gamepad.Domain.csproj
@@ -34,12 +34,18 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System"/>
+        <Reference Include="System.ComponentModel.DataAnnotations" />
         <Reference Include="System.Core"/>
         <Reference Include="System.Data"/>
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Order.cs" />
+        <Compile Include="OrderItem.cs" />
+        <Compile Include="Product.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Review.cs" />
+        <Compile Include="User.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
