--- a/UTM.Gamepad.Web/Web.config
+++ b/UTM.Gamepad.Web/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="GameStoreDb"
+         connectionString="Server=localhost;Database=GameStore;Trusted_Connection=True;"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
