--- a/UTM.Gamepad.Infrastructure/UTM.Gamepad.Infrastructure.csproj
+++ b/UTM.Gamepad.Infrastructure/UTM.Gamepad.Infrastructure.csproj
@@ -47,9 +47,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Migrations\202503192012590_db.cs" />
+    <Compile Include="Migrations\202503192012590_db.Designer.cs">
+      <DependentUpon>202503192012590_db.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProductRepository.cs" />
+    <Compile Include="OrderRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
+    <Compile Include="Repository\RoleRepository.cs" />
     <Compile Include="Migrations\202503161024222_first.cs" />
     <Compile Include="Migrations\202503161024222_first.Designer.cs">
       <DependentUpon>202503161024222_first.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503191758431_second.cs" />
+    <Compile Include="Migrations\202503191758431_second.Designer.cs">
+      <DependentUpon>202503191758431_second.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202503191906578_third.cs" />
+    <Compile Include="Migrations\202503191906578_third.Designer.cs">
+      <DependentUpon>202503191906578_third.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,14 +77,24 @@
   <ItemGroup>
     <ProjectReference Include="..\UTM.Gamepad.Domain\UTM.Gamepad.Domain.csproj">
       <Project>{e4fdb5f5-572b-47f8-9110-49646dd80b4a}</Project>
-      <Name>UTM.Gamepad.Domain</Name>
+      <n>UTM.Gamepad.Domain</n>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202503161024222_first.resx">
       <DependentUpon>202503161024222_first.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503191758431_second.resx">
+      <DependentUpon>202503191758431_second.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503191906578_third.resx">
+      <DependentUpon>202503191906578_third.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503192012590_db.resx">
+      <DependentUpon>202503192012590_db.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
