--- a/UTM.Gamepad.Web/packages.config
+++ b/UTM.Gamepad.Web/packages.config
@@ -14,4 +14,5 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
 </packages>
