--- a/UTM.Gamepad.Domain/UTM.Gamepad.Domain.csproj
+++ b/UTM.Gamepad.Domain/UTM.Gamepad.Domain.csproj
@@ -45,6 +45,7 @@
         <Compile Include="Product.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="Review.cs" />
+        <Compile Include="Role.cs" />
         <Compile Include="User.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
