--- a/UTM.Gamepad.BussinessLogic/UTM.Gamepad.BussinessLogic.csproj
+++ b/UTM.Gamepad.BussinessLogic/UTM.Gamepad.BussinessLogic.csproj
@@ -8,8 +8,8 @@
         <ProjectGuid>{7682E787-7E29-4722-9827-D4D783B25321}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>UTM.Gamepad.Application</RootNamespace>
-        <AssemblyName>UTM.Gamepad.Application</AssemblyName>
+        <RootNamespace>UTM.Gamepad.BussinessLogic</RootNamespace>
+        <AssemblyName>UTM.Gamepad.BussinessLogic</AssemblyName>
         <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -46,9 +46,20 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="BusinessLogicFactory.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Services\AuthBL.cs" />
         <Compile Include="Services\AuthService.cs" />
+        <Compile Include="Services\Interfaces\IAuthBL.cs" />
+        <Compile Include="Services\Interfaces\IOrderBL.cs" />
+        <Compile Include="Services\Interfaces\IProductBL.cs" />
+        <Compile Include="Services\Interfaces\IRoleBL.cs" />
+        <Compile Include="Services\Interfaces\IUserBL.cs" />
+        <Compile Include="Services\OrderBL.cs" />
+        <Compile Include="Services\ProductBL.cs" />
+        <Compile Include="Services\RoleBL.cs" />
         <Compile Include="Services\RoleService.cs" />
+        <Compile Include="Services\UserBL.cs" />
         <Compile Include="Services\UserService.cs" />
         <Compile Include="Services\ProductService.cs" />
         <Compile Include="Services\OrderService.cs" />
